[tool.poetry]
name = "okie"
version = "0.1.0"
description = "[WIP] Small(and dumb) http request generator and stream controller"
authors = ["Martin Winks <cat@snejugal.ru>"]
license = "MIT"
readme = 'readme.rst'
homepage = "https://github.com/uwinx/okie"
repository = "https://github.com/uwinx/okie"
keywords = ['http', 'asyncio']

packages = [
    {include = "okie"},
]

[tool.poetry.dependencies]
python = "^3.7"
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
httptools = "^0.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
